Se hace manejo de excepciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:postgresql://ep-calm-wood-66281423.us-east-2.aws.neon
 spring.datasource.username=fl0user
 spring.datasource.password=ljIrdn0WacR3
 spring.jpa.hibernate.ddl-auto=update
+
+#Config openapi swagger
+springdoc.swagger-ui.path=/swagger-ui-custom.html
