--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=5432
 spring.datasource.url=jdbc:postgresql://ep-calm-wood-66281423.us-east-2.aws.neon.fl0.io:5432/FlyEaseDataBase
 spring.datasource.username=fl0user
 spring.datasource.password=ljIrdn0WacR3
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 #Config openapi swagger
 springdoc.swagger-ui.path=/swagger-ui-custom.html
