--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://ep-calm-wood-66281423.us-east-2.aws.neon
 spring.datasource.username=fl0user
 spring.datasource.password=ljIrdn0WacR3
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 
 #Config openapi swagger
 springdoc.swagger-ui.path=/swagger-ui-custom.html
