--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=flyease-api-rest
 server.port=5432
 
 #Database Connection
-spring.datasource.url=jdbc:postgresql://ep-calm-wood-66281423.us-east-2.aws.neon.fl0.io:5432/FlyEaseDataBase
+spring.datasource.url=jdbc:postgresql://dpg-corvjna1hbls73fc8u50-a.oregon-postgres.render.com:5432/flyeasedb_s5kt
 spring.datasource.username=fl0user
-spring.datasource.password=ljIrdn0WacR3
+spring.datasource.password=7pPTHLFAQBI67YytpwlB69UAPnA4A8iz
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
